2006-01-12  ------ omnetpp-3.2p1 released ------

2005-10-19  ------ omnetpp-3.2 released ------

2005-09-27  Andras Varga

	* tkapp.cc: bugfix: should call endRun() instead of simulation.endRun()
	[reported by Johann Glaser]

2005-08-09  Andras Varga

	* dialogs.tcl: Find/Inspect Objects dialog became nonmodal.

2005-08-04  Andras Varga

	* added "Run until next local event" to modules' context menu

2005-07-26  Andras Varga

	* tkapp.cc/h: added support for OPP_PLUGIN_PATH environment variable,
	and [Tkenv]/plugin-path=dir1:dir2:... omnetpp.ini entry.

2005-07-25  Andras Varga

	* statinsp.cc: cOutVector callback method signature change: added
	simtime_t to record_in_insp() arg list.

2005-07-24  Andras Varga

	* tkapp.cc: flush output vector file and output scalar file after
	every event while single-stepping (F4) or when the user stops
	a running simulation (F8). This makes it possible examine a vec
	file with Plove without exiting the simulation program [suggested by
	Michael Tuexen]

2005-07-23  Andras Varga

	* WATCH implementation changed

	* cGate inspector: channel attributes (delay, error and datarate)
	can now be changed from the GUI. [suggested by Michael Tuexen]

2005-07-21  Andras Varga

	* inspector.tcl: added support for custom items on the context
	menu (e.g. right-click on a router, "Inspect Routing Table..."
	Usage: via extendContextMenu proc. [idea: Wei Yang Ng]

2005-07-20  Andras Varga

	* inspector.tcl, structinsp.cc: in message inspector Fields and 
	Control Info pages, indented 2nd, 3rd etc lines of very long entries,
	to make it more legible (Tk text tag -lmargin2 option)

2005-06-24  Andras Varga

	* modinsp2.tcl: fix: r= display string tag worked incorrectly: circle
	was displayed with radius = r/2 instead of r

2005-05-01  Andras Varga

	* cMessage inspector now displays message size in bytes as well

2005-04-21  Andras Varga

	* added implementation of timeline

2005-03-31  ------ omnetpp-3.1 released ------

2005-03-22  Andras Varga
