@@ -1,3 +1,8 @@
+2006-03-19  Andras Varga
+
+	* tkapp.cc: use simulation.guessNextSimtime() to display the time of 
+	the [probable] next event
+
 2006-01-12  ------ omnetpp-3.2p1 released ------
 
 2005-10-19  ------ omnetpp-3.2 released ------
